rejig of open/new/close/delete/upload menus and pages and right click and stuff

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/finder.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/finder.css
@@ -1,10 +1,11 @@
-#finder {
-    background : white;
-    width      : 100%;
-}
+#finder
+{
+  background : white;
+  width      : 100%;
+  }
 
 #finder .panewrapper {
-    height     : 305px;
+    height     : 335px;
     overflow-x : auto;
     overflow-y : auto;
 }
