oops, fix for deminified jquery.tablesorter.js

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -922,7 +922,7 @@
     <script src="/hypernumbers/hn.map.js"></script>
     <script src="/hypernumbers/hn.selection.js"></script>
     <script src="/hypernumbers/hn.logger.js"></script>
-    <script src="/hypernumbers/jquery.tablesorter.min.js"></script>
+    <script src="/hypernumbers/jquery.tablesorter.js"></script>
     <script src="/jscolor/jscolor.js"></script>
     <script src="/hypernumbers/hn.ui.ctrlpanel.js"></script>
     <script src="/hypernumbers/hn.ui.pagespanel.js"></script>
