fix for too short/not scrolling new pages/templates

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1495,11 +1495,15 @@ a.toolbar-item {
 
 #newpage, #templatename
 {
-  width: 170px;
+  width: 280px;
   padding: 2px 0px 0px 0px;
 }
 
-#templateslist, #templateslist2
+#templateslist
+{
+  width: 180px;
+  }
+#templateslist2
 {
   width: 170px;
   }
