--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -642,17 +642,17 @@
       <div id="sitenewpage">
         <form id="hn_newpageform">
         <div>Pages are of the form <em>/some/page/</em> - and can be based on a template.</div>
-           <input type="text" id="newpage" value="" />
+           <input type="textarea" id="newpage" value="" />
+           <span id="templates"></span>
            <input id="newspreadsheet" type="submit" value="New" class="button" />
-           <div id="templates"></div>
         </form>
       </div>
       <div id="sitesaveastemplate">
         <form id="hn_saveastemplateform">
         <div id="hn_save_as_temp_text"></div>
-        <input id="templatename" />
-        <input id="saveastemplate" type="button" value="Save As..." />
+        <input id="templatename" type="textarea" />
         <span id="templates2"></span>
+        <input id="saveastemplate" type="button" value="Save As..." />
         </form>
         </div>
       <div id="siteuploadxls">
