moving branding from hypernumbers to vixo

--- a/lib/hypernumbers-1.0/priv/core_install/views/404.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/404.html
@@ -31,8 +31,7 @@
     <div id='editspreadsheet' class='ctrlbox'>
 
       <div id='powered'>
-        <span class='hyper'>hyper</span>
-        <span class='numbers'>numbers</span>
+        <span class='hyper'>Setting</span>
       </div>
 
       <div id='editingmenu' class='ctrlbox'>
