--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Hypernumbers - the team spreadsheet</title>
+    <title>like spreadsheets, but better</title>
     <link rel="stylesheet" href="/webcomponents/webcomponents.css" />
     <link rel="stylesheet" href="/webcomponents/webbasic.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
@@ -24,7 +24,7 @@
 	<li id="anonymous">
         <div id="editspreadsheet">
     <div id="powered" class="ctrlbox">
-        <span class="hyper">hyper</span><span class="numbers">numbers</span>
+      <span class="hyper">Settings</span>
     </div>
     <div id="editingmenu" class="ctrlbox">
         <div id="editanon">
