--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <title>Hypernumbers - the team spreadsheet</title>
+    <title></title>
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
     <link rel="stylesheet" href="/tblsorter/style.css" />
