--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -746,6 +746,23 @@ label {
                 text-decoration: underline;
                }
 
+.hn_site_admin
+{
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border : 3px solid #ffc47e;
+  background-color  : #fefefe;
+  margin: 1px;
+  padding: 4px;
+  color: #333;
+  }
+
+.hn_site_admin_top
+{
+  font-weight: bold;
+  font-size : 14pt;
+  }
+
 .hn_inlineselect {
                    width: 100%;
                    height: 20px;
