--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
@@ -5,7 +5,6 @@
 
 
 -------------------------------------------------------------*/
-* {padding: 0; margin: 0;}
 #containter { margin: 60px;}
 
 /* Styles needed to counter the hn style
@@ -23,9 +22,7 @@ Style 1 (generic)
 
 /* body and reset declarations
 ---------------------------------------*/
-*, html, body { margin: 0; padding: 0;}
 body { color: #3f3f3f; font-family: Verdana, Geneva, sans-serif; }
-
 
 /**********************************************
 
@@ -38,6 +35,7 @@ Crumbs
 Menu
 
 **********************************************/
+.hn_sld_menu { padding: 0px; }
 .hn_sld_menu a { border: none;}
 .hn_sld_menu, .hn_sld_menu ul { height: 60px; list-style-type: none;text-align: left; }
 .hn_sld_menu li {
