fix for changed version of table sorter in table view

--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -86,7 +86,7 @@
   </body>
 
   <script src='/hypernumbers/jquery-1.7.1.min.js'></script>
-  <script src='/hypernumbers/jquery.tablesorter.min.js'></script>
+  <script src='/hypernumbers/jquery.tablesorter.js'></script>
   <script src='/hypernumbers/jquery.tablesorter.jfilterselect.min.js'></script>
   <script src='/hypernumbers/jquery.columnmanager.min.js'></script>
 
