New 'thank you for validating page' and rebranding
Gone through all the html changing 'hypernumbers' to vixo in text and logo's and stuff...

--- a/lib/hypernumbers-1.0/priv/core_install/views/invalidurl.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/invalidurl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>Hypernumbers - Invalid URL</title>
+    <title>Vixo - Invalid URL</title>
 
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
@@ -20,10 +20,10 @@
   <body>
     <div id="wrapper">
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/logo_white.png" alt="logo"></img>
+        <img src="/img/vixo.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>Invalid URL</strong></p>
-          <p>This is not a valid Hypernumbers URL. URL paths may contain upper and lowercase letters, numbers and the characters '_', '-', '~' and '|' only.</p>
+          <p>This is not a valid Vixo URL. URL paths may contain upper and lowercase letters, numbers and the characters '_', '-', '~' and '|' only.</p>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
               <span id='forgotten_pwd'></span><br />
             </div>
             <div id='loginfeedback'></div>
-            or sign up at <a href='http://hypernumbers.com'>hypernumbers.com</a>
+            or sign up at <a href='http://vixo.com'>vixo.com</a>
           </form>
         </div>
       </div>
