--- a/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
@@ -1,14 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 <title>Recalc Page</title>
+    <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
+    <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
+    <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />
 </head>
 
 <body style='margin:0px;padding:0px;font: 12px/1.7 Verdana,Tahoma,sans-serif;text-align:center'>
-<h2>Recalculating.</h2>
-
-<p>Sorry you have to use this functionality.</p>
-<p>The Hypernumbers Team are working on it.</p>
+<div id='wrapper'>
+      <div style="text-align:center;padding-top:15px;">
+        <img src="/img/vixo.png" alt="logo"></img>
+        <div style="padding:10px;">
+          <p><strong>Recalculating</strong></p>
+          <p>Sorry you have to use this functionality.</p>
+          <p>The Vixo Team are working on it.</p>
+        </div>
+      </div>
+      </div>
 
 </body> </html>
