--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
@@ -1,12 +1,12 @@
 <html>
-  <title>Hypernumbers SoftPhone</title>
+  <title>Vixo SoftPhone</title>
   <link rel='stylesheet' href='/contacts/hn.phone.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.sheet.css' />
   <link rel='stylesheet' href='/hypernumbers/hn.style.css' />
   <script src="/hypernumbers/err.remoterr.js"></script>
   <body>
     <div id='hn-phone-frame' style='display:none'>
-    <h2>Hypernumbers SoftPhone</h2>
+    <h2>Vixo SoftPhone</h2>
     <hr />
     <div id='hn-phone-headline' class='hn-phone-text'></div>
     <div id='hn-phone-to' class='hn-phone-text2'></div>
