--- a/lib/hypernumbers-1.0/priv/core_install/views/cell.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/cell.html
@@ -26,7 +26,7 @@
 
     <div id="wrapper">
 
-      <div id="header"><h1>Hypernumbers</h1></div>
+      <div id="header"><h1>Vixo</h1></div>
       <div id="text" style="padding:0px 10px 10px 10px;"><p></p></div>
     </div>
   </body>
