--- a/lib/hypernumbers-1.0/priv/core_install/views/forgotten_password.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/forgotten_password.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-  <title>Hypernumbers Password Reset</title>
+  <title>Vixo Password Reset</title>
   <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
   <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
   <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />
@@ -16,8 +16,8 @@
 
 <body>
   <div id='wrapper'>
-    <div style='text-align:center;padding-top:15px;'><img src=
-    "/img/logo_white.png" alt='hypernumbers logo'></div>
+    <div style='text-align:center;padding-top:15px;'>
+      <img src= "/img/vixo.png" alt='vixo logo'></div>
 
     <div style='padding:10px;'>
       <div id='passwordresetform'>
