--- a/lib/hypernumbers-1.0/priv/core_install/views/login.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/login.html
@@ -24,7 +24,7 @@
 
     <div id="wrapper">
 
-      <div id="header"><h1>Hypernumbers</h1></div>
+      <div id="header"><h1>Vixo</h1></div>
       <div id="feedback">Please enter your details to log in.</div>
       <div style="padding:0px 10px 10px 10px;" id="form">
         <form action="" method="post">
