--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -36,7 +36,7 @@
             <div class="formrow"><input type="submit" id="submit" value="Log in" class="button" /><span id="forgotten_pwd"></span><br /></div>
             <div id="loginfeedback"></div>
 
-            or sign up at <a href="http://hypernumbers.com">hypernumbers.com</a>
+            or sign up at <a href="http://vixo.com">vixo.com</a>
           </form>
             </div>
             </div>
@@ -795,13 +795,13 @@
 	<div id="tourwrapper">
       <div class="tourpage">
         <h4>Getting Started</h4>
-        <p>If you like to get stuck in you can continue with this tour. Each page will take you through some simple steps to learn how hypernumbers works. Our online documentation has a <a href='http://documentation.hypernumbers.com/index.html#building-a-hypernumbers-application'>Tutorial</a> on building a full-blown application with hypernumbers for when you've finished.</p>
-        <p>If you want to see what Hypernumbers can do, we have a series of <a href='http://hypernumbers.com'>explanatory videos</a> on our home page.</p>
-        <p>Our extensive online documentation covers all aspects of Hypernumbers:</p>
+        <p>If you like to get stuck in you can continue with this tour. Each page will take you through some simple steps to learn how vixo works. Our online documentation has a <a href='http://documentation.vixo.com/index.html#building-a-vixo-application'>Tutorial</a> on building a full-blown application with vixo for when you've finished.</p>
+        <p>If you want to see what Vixo can do, we have a series of <a href='http://vixo.com'>explanatory videos</a> on our home page.</p>
+        <p>Our extensive online documentation covers all aspects of Vixo:</p>
         <ul>
-          <li>to see if hypernumbers is for you read <a href='http://documentation.hypernumbers.com/index.html#why-hypernumbers'>Why You Should Use Hypernumbers</a></li>
-          <li>to understand how hypernumbers works in general you should read the <a href='http://documentation.hypernumbers.com/index.html#getting-to-know-hypernumbers'>overview</a> of what it can do.</li>
-          <li>For a detailed discussion there is a chapter covering Hypernumbers <a href='http://documentation.hypernumbers.com/index.html#hypernumbers-indepth'>indepth</a></li>
+          <li>to see if vixo is for you read <a href='http://documentation.vixo.com/index.html#why-vixo'>Why You Should Use Vixo</a></li>
+          <li>to understand how vixo works in general you should read the <a href='http://documentation.vixo.com/index.html#getting-to-know-vixo'>overview</a> of what it can do.</li>
+          <li>For a detailed discussion there is a chapter covering Vixo <a href='http://documentation.vixo.com/index.html#vixo-indepth'>indepth</a></li>
         </ul>
             <p style="color:darkorange;font-weight:bold;">Read on or continue to take the tour.</p>
       </div>
@@ -818,11 +818,11 @@
             <li><span class="hn_em">advanced web</span> - some of our experimental web stuff</li>
             </ul>
             <p style="color:darkorange;font-weight:bold;">Add yourself as an administator on the views menu to make this website yours.</p>
-          <p>There are also videos on <a href="http://hypernumbers.com/">hypernumbers</a> or click the <span class="hn_em">buttons</span> below.</p>
+          <p>There are also videos on <a href="http://vixo.com/">vixo</a> or click the <span class="hn_em">buttons</span> below.</p>
 	    </div>
 	    <div class="tourpage">
 	      <h4>Just A Normal Spreadsheet</h4>
-          <p>The Hypernumbers spreadsheet is pretty much a normal spreadsheet. It has:</p>
+          <p>The Vixo spreadsheet is pretty much a normal spreadsheet. It has:</p>
           <ul><li>a set of Excel/Open Office compatible functions</li>
           <li>Excel-compatible formats</li>
           <li>formula dragging</li>
@@ -830,32 +830,32 @@
           <li>column and row resizing - <span class="hn_em">use the right click menu</span></li>
           <li>the normal keyboard short cuts</li>
           </ul>
-          <p>There is not really a lot to learn about the basic stuff. There is some special stuff you will need to know to get the most out of Hypernumbers though - which is covered on the next page of the tour.</p>
+          <p>There is not really a lot to learn about the basic stuff. There is some special stuff you will need to know to get the most out of Vixo though - which is covered on the next page of the tour.</p>
           </div>
 	    <div class="tourpage">
 	      <h4>Consolidating Spreadsheets</h4>
-          <p>Hypernumbers is heirarchical.</p>
+          <p>Vixo is heirarchical.</p>
           <p>On the desktop you put <em>files</em> in <em>folders</em>. So <em>c: -> users -> johnsmith -> budgets -> 2010</em> might contain:</p>
           <ul><li><em>costcentrebudget1.xls</em></li>
           <li><em>costcentrebudget2.xls</em></li></ul>
-          <p>With Hypernumbers the directory structure and the spreadsheet are merged together:</p>
+          <p>With Vixo the directory structure and the spreadsheet are merged together:</p>
           <ul><li><em>/budgets/2010/costcentrebudget1/</em></li>
           <li><em>/budgets/2010/costcentrebudget2/</em></li></ul>
-          <p>But <em>/budgets/2010/</em> is also a spreadsheet and it can consolidate the budgets underneath it. See the template <span class="hn_em">consolidation</span> for more details. You can query these spreadsheet with our <a href='http://documentation.hypernumbers.com/contents/indepth/database-queries.html'>database queries</a>.</p>
+          <p>But <em>/budgets/2010/</em> is also a spreadsheet and it can consolidate the budgets underneath it. See the template <span class="hn_em">consolidation</span> for more details. You can query these spreadsheet with our <a href='http://documentation.vixo.com/contents/indepth/database-queries.html'>database queries</a>.</p>
           </div>
 	    <div class="tourpage">
 	      <h4>Understanding Views</h4>
-          <p>With Hypernumbers you can have 4 different views of each spreadsheet:</p>
+          <p>With Vixo you can have 4 different views of each spreadsheet:</p>
           <ul><li>a <span class="hn_em">spreadsheet view</span> - for people who need to <em>change</em> the structure of the spreadsheet</li>
-          <li>a <span class="hn_em"><a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/web-and-wikipages.html'>webpage view</a></span> - for people who need to <em>see</em> the contents of the spreadsheet</li>
-          <li>a <span class="hn_em"><a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/web-and-wikipages.html'>wikipage view</a></span> - for people who need to <em>input data</em> into a spreadsheet some else has built</li>
-          <li>a <span class="hn_em"><a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/table-view.html'>table view</a></span> - for people who need to <em>sort</em> a spreadsheet</li></ul>
+          <li>a <span class="hn_em"><a href='http://documentation.vixo.com/contents/vixo-overview/web-and-wikipages.html'>webpage view</a></span> - for people who need to <em>see</em> the contents of the spreadsheet</li>
+          <li>a <span class="hn_em"><a href='http://documentation.vixo.com/contents/vixo-overview/web-and-wikipages.html'>wikipage view</a></span> - for people who need to <em>input data</em> into a spreadsheet some else has built</li>
+          <li>a <span class="hn_em"><a href='http://documentation.vixo.com/contents/vixo-overview/table-view.html'>table view</a></span> - for people who need to <em>sort</em> a spreadsheet</li></ul>
           <p>You can explore views by using the <em>views</em> menu at the top right of the toolbar.</p>
           <p>You can give different people different permissions to see different views of the same page - see <span class="hn_em">page 7</span> of the tour. The next page of this tour discusses the wikipage in more detail.</p>
           </div>
 	    <div class="tourpage">
 	      <h4>The Wikipage View</h4>
-          <p>The <a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/web-and-wikipages.html'>wiki page</a> view is just a webpage where some items can be edited.</p>
+          <p>The <a href='http://documentation.vixo.com/contents/vixo-overview/web-and-wikipages.html'>wiki page</a> view is just a webpage where some items can be edited.</p>
           <p>To make a wiki page just build a normal spreadsheet and identify the cells that you want some one else to input data into.</p>
           <p>Toggle wiki cells with the <em>wiki button</em><span class="inlineinput">&nbsp;</span>on the toolbar.</p>
           <p>Wiki pages are designed to make <span class="hn_em">negotiating</span> and <span class="hn_em">agreeing</span> figures as easy as possible. Issue a spreadsheet with all the data you are trying to collect as wiki cells and un-wiki each line item as you agree it.</p>
@@ -864,7 +864,7 @@
 	    <div class="tourpage">
 	      <h4>Users And Permissions</h4>
           <p>There is one place to manage all users and their access to all your spreadsheets.</p>
-          <p>You can explore <a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/permissions.html'>permissions</a> by using the view menu at the top right of the toolbar. You will see little tabs for <em>users</em> and <em>groups</em>.</p>
+          <p>You can explore <a href='http://documentation.vixo.com/contents/vixo-overview/permissions.html'>permissions</a> by using the view menu at the top right of the toolbar. You will see little tabs for <em>users</em> and <em>groups</em>.</p>
           <p>For <span class="hn_em">quick (and dirty) sharing</span> just set up the page as you want it, choose the default view and enter as e-mail address and click.</p>
           <p>For <span class="hn_em">proper sharing</span> you need to do a little more work. First create a <em>group</em> like <em>accounts</em> or <em>staff</em>. Then add the email addresses of your people to that group. Finally add the group to the page views.<p>
       </div>
@@ -874,18 +874,18 @@
           <p>To make a form simply select some cells, and then use <em>Create Form</em> on the right-click menu.</p>
           <p>Forms can be deployed on either webpages or wikipages.</p>
           <p>When a user fills in a form the results are posted to <em>another page</em>. The input is a table spreadsheet and is ideally displayed as a table view.</p>
-          <p>For more details see the template <span class="hn_em">forms and tables</span> or read the <a href='http://documentation.hypernumbers.com/contents/hypernumbers-overview/making-forms.html'>documentation</a>.</p>
+          <p>For more details see the template <span class="hn_em">forms and tables</span> or read the <a href='http://documentation.vixo.com/contents/vixo-overview/making-forms.html'>documentation</a>.</p>
           </div>
         <div class="tourpage">
 	      <h4>Fancy-Schmacy Web Stuff</h4>
 	      <p>We have some experimental fancy web stuff.</p>
-          <p>To play with it see the template <span class="hn_em">advanced web</span> or browse the function list in the <a href='http://documentation.hypernumbers.com/#hypernumbers-functions-reference'>documentation</a>.</p>
-          <p>You can do lots of cool stuff with hypernumbers.</p>
+          <p>To play with it see the template <span class="hn_em">advanced web</span> or browse the function list in the <a href='http://documentation.vixo.com/#vixo-functions-reference'>documentation</a>.</p>
+          <p>You can do lots of cool stuff with vixo.</p>
 	    </div>
       <div class="tourpage">
 	      <h4>Talk To Me</h4>
-	      <p>Hypernumbers is still an early product - we really value your feedback. We are delighted if there are things you like about our product but we really welcome any comments about problems you are having or bugs that you have found.</p>
-          <p>If you need any help or want to know anything just drop me an email at <em>gordon@hypernumbers.com</em> or give me a ring on <em>+44 7776 251669</em> - but remember we are based in Bonnie Scotland and our time zone is Greenwhich Mean Time/British Summer Time.</p>
+	      <p>Vixo is still an early product - we really value your feedback. We are delighted if there are things you like about our product but we really welcome any comments about problems you are having or bugs that you have found.</p>
+          <p>If you need any help or want to know anything just drop me an email at <em>gordon@vixo.com</em> or give me a ring on <em>+44 7776 251669</em> - but remember we are based in Bonnie Scotland and our time zone is Greenwhich Mean Time/British Summer Time.</p>
 	    </div>
 	</div>
     <div id="hn_tourfooter">
