oops, shoulda committed the CSS for site admin boxes

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -763,6 +763,23 @@ label {
   font-size : 14pt;
   }
 
+.hn_site_admin table
+{
+  height : auto;
+  width  : auto;
+  }
+
+.hn_site_admin td
+{
+  padding: 0px 20px 0px 0px;
+  }
+
+.hn_site_admin em
+{
+  font-weight: bold;
+  color:       #ff6000;
+ }
+
 .hn_inlineselect {
                    width: 100%;
                    height: 20px;
