minor font class error

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -159,7 +159,7 @@
 	  <a data-command="FontName" data-param="monospace" class="monospace"
 	    data-style="font-family">$txt:{Monospace}$</a>
 	  <a data-command="FontName"
-	    data-param="Helvetica, Arial, serif" class="arial"
+	    data-param="Helvetica, Arial, sans-serif" class="arial"
 	    data-style="font-family">$txt:{Arial}$</a>
 	  <a data-command="FontName" class="georgia"
 	    data-style="font-family">$txt:{Georgia}$</a>
