other half of minor font family error

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1818,7 +1818,7 @@ a.toolbar-item {
 .sans-serif { font-family: sans-serif; }
 .serif      { font-family: serif; }
 .monospace  { font-family: monospace; }
-.arial      { font-family: Helvetica, Arial, serif; }
+.arial      { font-family: Helvetica, Arial, sans-serif; }
 .georgia    { font-family: georgia, serif; }
 .garamond   { font-family: garamond, serif; }
 .trebuchet  { font-family: trebuchet ms, sans-serif; }
