Make factory control work
Add a range of features:
* can add user-defined stuff from the control
* has a 5 minute delay on setting up the site
  - erk need to think about the text message/robocall...

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/hn.factory.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/hn.factory.css
@@ -9,7 +9,7 @@
   font    : inherit;
   }
 
-.hn_factory input[type=text]
+.hn_factory input[type=text], hn_factory_email
 {
   width : 100%;
   border: 1px solid #999;
