added 'secret' vimeo functions with built in user action tracking for vixo

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -746,6 +746,11 @@ label {
                 text-decoration: underline;
                }
 
+.hn_scroll
+{
+  overflow: auto;
+  }
+
 .hn_site_admin
 {
   -moz-border-radius: 4px 4px 4px 4px;
@@ -772,6 +777,7 @@ label {
 .hn_site_admin td
 {
   padding: 0px 20px 0px 0px;
+  line-height: 16px;
   }
 
 .hn_site_admin em
