--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -53,7 +53,7 @@ a img:hover { opacity: 0.6;}
 
 .hn_prompt
 {
-  font-size  : 80%;
+  font-size  : 90% !important;
   font-style : italic;
   color      : #99f;
  }
