erk, basic error

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
@@ -228,7 +228,7 @@ a:hover {
   height: 110px;
   width: 55px;
 }
-// styling for the factory
+/* styling for the factory*/
 .hn_site_admin_top
 {
     color: #006d5b;
