more css tweaks

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
@@ -241,3 +241,9 @@ a:hover {
 font-size: 13px;
 line-height: 18px
 }
+.hn_factory_email
+{
+margin-right: 4px;
+margin-bottom: 0px;
+padding: 4px 4px 4px 4px;
+}
