--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
@@ -247,3 +247,8 @@ width: 200px !important;
 margin-bottom: 0px;
 padding: 4px 4px 4px 4px;
 }
+/* additional style to make forms work */
+.hn_input
+{
+  font-size: 10px;
+}
