--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
@@ -248,7 +248,7 @@ margin-bottom: 0px;
 padding: 4px 4px 4px 4px;
 }
 /* additional style to make forms work */
-.hn_input
+.hninput
 {
   font-size: 10px;
 }
