--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/vixo.css
@@ -250,5 +250,5 @@ padding: 4px 4px 4px 4px;
 /* additional style to make forms work */
 .hninput
 {
-  font-size: 10px;
+ padding: 2px 2px 2px 0px;
 }
