take underline out of menus

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/webcomponents/newwebcomponents.css
@@ -11,7 +11,7 @@
 ------------------------------------------------*/
 
 .hn_sld_menu li { margin-left: 0; text-align:left}
-
+.hn_sld_menu a { text-decoration: none; }
 /*----------------------------------------------------------------*/
 
 /**********************************************
