Added ghost functionality
You can ghost cells out from web and wiki pages.

Wiki inputs won't ghost on wiki pages, but they will on webpages

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -975,6 +975,7 @@ a.toolbar-item {
 #inlinerichtextinput { background-position: -230px -41px; }
 #inlinedropdown { background-position: -228px -103px; }
 #hn_userdeffns { background-position: -228px -82px; }
+#ghost { background-position: -205px -41px; }
 
 /* used in the tour */
 .inlineinput {
