--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -281,6 +281,8 @@
       <a title="Make Wiki Rich Text Input" class="toolbar-item" id="inlinerichtextinput"></a>
       <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
     <a class="separator"></a>
+      <a title="Ghost Out Cell" class="toolbar-item" id="ghost"></a>
+    <a class="separator"></a>
       <div class="expand forms" id="formsmenu">
         <span id="formsmenuwrap">Forms</span>
       <div id="formsmenulist" class="expandinner">
