fix for bootstrap css clash

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -862,6 +862,10 @@ table.tablesorter tbody tr.highlight td {
     background-color: transparent;
 }
 
+.horiz_sep
+{
+  margin: 3px;
+ }
 
 .separator {
  cursor:       default;
