Mix of gui fixes
Some are for bootstrap
Some are for the map upload dialog box
Bits and pieces of others

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/bootstrap/css/helper.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/bootstrap/css/helper.css
@@ -1,3 +1,14 @@
+.hn-btn-large
+{
+  width  : 126px !important;
+  height : auto !important;
+  }
+
+.hn-btn-small
+{
+  width  : 56px !important;
+  height : auto !important;
+ }
 
 /*.crumb + span
 {
