--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -776,10 +776,11 @@
     <div id="hn_map_body"></div>
     <div id="hn_data_upload_ctrls">
 
-      <div>
+      <div id="hn_map_delete_panel">
         Selected detail:
         <input id="hn_map_delete" type="button", value="delete" />
       </div>
+      <hr />
       <div>
         <input id="hn_map_name" />
         <input id="hn_map_save" type="button", value="save" />
