--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1579,10 +1579,12 @@ a.toolbar-item {
                      font-weight : bold;
                      }
 
-.hn_dialog_grayhead {
-                      color       : #999;
-                      size        : 120%;
-                      font-weight : bold;
+.hn_dialog_grayhead
+{
+  margin      : 30px 0 0 0;
+  color       : #999;
+  size        : 120%;
+  font-weight : bold;
                      }
 
 .hn_panel {
@@ -1597,8 +1599,9 @@ a.toolbar-item {
    font   : 12px/1.7 Verdana,Tahoma,sans-serif;
 }
 
-#hn_add_val {
-              margin: 56px 0px 0px 0px;
+#hn_add_val
+{
+  margin: 40px 0px 0px 0px;
 }
 
 #hn_add_map {
@@ -1634,7 +1637,7 @@ a.toolbar-item {
                }
 
 #hn_map_body {
-               height   : 100px;
+               height   : 107px;
                overflow : auto;
                }
 
@@ -1642,16 +1645,18 @@ a.toolbar-item {
                    border-bottom: 1px solid #ddd;
                    }
 
-#hn_map_head, #hn_map_body {
-                             font                  : 9px Courier, monospace;
-                             padding               : 2px;
-                             width                 : 175px;
-                             background-color      : #fff;
-                             -webkit-border-radius : 3px 3px 3px 3px;
-                             -moz-border-radius    : 3px 3px 3px 3px;
-                             border                : 1px solid #ddd;
-                             float                 : right;
-                             }
+#hn_map_head, #hn_map_body
+{
+  margin                : 5xpx 0 0 0;
+  font                  : 9px Courier, monospace;
+  padding               : 2px;
+  width                 : 175px;
+  background-color      : #fff;
+  webkit-border-radius : 3px 3px 3px 3px;
+  moz-border-radius    : 3px 3px 3px 3px;
+  border                : 1px solid #ddd;
+  float                 : right;
+  }
 
 #hn_data_mapper {
                   background-color      : #eee;
@@ -1675,12 +1680,12 @@ a.toolbar-item {
                    }
 
 
-#hn_data_upload_ctrls select, .hn_panel select, #hn_map_select select {
-                               margin           : 5px 0px 0px 0px;
-                               background-color : #ffffff;
-                               font-size        : 80%;
-                               color            : #555555;
-                              }
+#hn_data_upload_ctrls select, .hn_panel select, #hn_map_select select
+{
+  background-color : #ffffff;
+  font-size        : 80%;
+  color            : #555555;
+  }
 
 #hn_data_upload_ctrls select, #hn_map_select select {
                                width            : 109px;
@@ -1708,6 +1713,11 @@ a.toolbar-item {
 #uploadxls, #ctrldelete, #saveastemplate, #pdvisit, #newspreadsheet, newspreadsheet {
     width: 100px
 }
+
+#hn_map_delete_panel
+{
+  margin: 0 0 9px;
+ }
 
 #hn_add_val, #hn_add_map, #hn_map_delete, #hn_map_save, #hn_map_load
 {
